--- a/styles/css/home/header/vtex.flex-layout.css
+++ b/styles/css/home/header/vtex.flex-layout.css
@@ -25,28 +25,15 @@
     margin-top : 29px;
     margin-left: 16px;
 }
-
-@media (max-width: 767px) {
-    .flexRowContent--header-container-menu-desktop {
-        gap: 30px;
-    }
-
-    .flexRow--header-container-menu-desktop {
-        margin-left: 0%;
-    }
+.flexCol--trigger-mega-menu-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-top: 1.6rem;
 }
-
 .flexRow--header-container-menu-desktop-section-one-rigth {
     margin-left: 35px;
 }
-
-@media (min-width: 1024px) {
-    .flexRow--conatainer-banner-home-desktop {
-        max-width: 1280px;
-        margin   : auto;
-    }
-}
-
 .flexRowContent--header-container-menu-desktop-section-one-right {
     margin-top: 25px;
 }
@@ -73,7 +60,7 @@
     position: relative;
 }
 
-.flexRowContent--header-container-menu-desktop-section-one-right :hover {
+.flexRowContent--header-container-menu-desktop-section-one-right:hover {
     text-decoration-line: underline;
 }
 
@@ -103,3 +90,21 @@
 .flexColChild--container-menu-serach-minicart-login-mobile {
     align-content: center;
 }
+
+@media (max-width: 767px) {
+    .flexRowContent--header-container-menu-desktop {
+        gap: 30px;
+    }
+
+    .flexRow--header-container-menu-desktop {
+        margin-left: 0%;
+    }
+}
+
+@media (min-width: 1024px) {
+    .flexRow--conatainer-banner-home-desktop {
+        max-width: 1280px;
+        margin   : auto;
+    }
+}
+
