--- a/styles/css/home/header/vtex.menu.css
+++ b/styles/css/home/header/vtex.menu.css
@@ -3,7 +3,8 @@
     font-size  : 12px;
     font-weight: 400;
     line-height: 15px;
-    text-align : right;
+    text-align : center;
+    white-space: break-spaces
 
 }
 .styledLinkContainer--menu-item{
