--- a/styles/css/home/minicart/vtex.minicart.css
+++ b/styles/css/home/minicart/vtex.minicart.css
@@ -1,4 +1,3 @@
-
 /*------------color boton ventana pop up---------------*/
 .minicartCheckoutButton--minicart-checkout-button :global(.vtex-button) {
   background-color: #1d2734;
@@ -90,7 +89,18 @@
   }
 }
 
-.openIconContainer--minicart-container{
-  padding: 0;
-  padding-left: 3rem;
+.openIconContainer--minicart-container {
+  padding        : 0;
+}
+
+@media (min-width: 1280px) {
+  .openIconContainer--minicart-container {
+    padding-left: 3rem;
+  }
+}
+
+@media (min-width: 640px) and (max-width: 1279px) {
+  .openIconContainer--minicart-container {
+    padding-left: 0;
+  }
 }
