--- a/styles/css/home/shelf-products/vtex.slider-layout.css
+++ b/styles/css/home/shelf-products/vtex.slider-layout.css
@@ -12,14 +12,23 @@
 
 @media (max-width: 768px) {
     .slideChildrenContainer--custom-slider-shelf {
-        padding: 0%;
+        padding  : 0%;
+        max-width: max-content;
     }
 }
 
 /*------------tablet---------------*/
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 640px) and (max-width: 1024px) {
     .paginationDotsContainer--custom-slider-shelf {
-        top: 600px !important;
+        top: 480px !important;
+    }
+
+    .slideChildrenContainer--custom-slider-shelf {
+        max-width  : min-content;
+    }
+
+    .slide--custom-slider-shelf{
+        justify-content: center;
     }
 
 }
