fix: adjust minicart and PLP for tablet and mobile responsiveness

--- a/styles/css/home/minicart/vtex.minicart.css
+++ b/styles/css/home/minicart/vtex.minicart.css
@@ -43,13 +43,11 @@
   right          : 18px;
   /* top         : 40px; */
   width          : 18.67px;
-  height         : 18.67px;
-  margin-right   : 20px;
 }
 
 .closeIcon--minicart-container {
-  background   : #f5f4f6;
-  border-radius: 50%;
+  background      : #f5f4f6;
+  border-radius   : 50%;
 }
 
 .opened {
@@ -66,6 +64,7 @@
   margin         : 20px 0px;
   scrollbar-color: #bebebe #f2f2f2;
   padding        : 0;
+  max-height     : 420px;
 }
 
 .minicartCheckoutButton--minicart-button {
@@ -79,6 +78,45 @@
   background   : rgba(29, 39, 52, 1);
 }
 
+.openIconContainer--minicart-container {
+  padding: 0;
+}
+
+.closeIconButton--minicart-container {
+  padding: 0;
+  height : max-content;
+}
+
+.minicartProductListContainer :global(.vtex-flex-layout-0-x-flexRowContent) {
+  padding    : 0;
+  margin     : 4px 0 4px 0;
+  gap        : 7.56px;
+  display    : flex;
+  align-items: flex-end;
+}
+
+.minicartProductListContainer :global(.vtex-flex-layout-0-x-flexCol) {
+  margin: 0;
+}
+
+.minicartCheckoutButton :global(.vtex-button__label)::after {
+  content       : "finalizar tu compra";
+  font-size     : 14px;
+  font-weight   : 400;
+  line-height   : 17.5px;
+  text-align    : center;
+  text-transform: lowercase;
+}
+
+.minicartCheckoutButton :global(.vtex-button__label) {
+  font-size: 0px;
+  display  : flex;
+}
+
+.minicartCheckoutButton :global(.vtex-button__label)::first-letter{
+  text-transform: capitalize;
+}
+
 @media (max-width: 780px) {
   .minicartSummary--minicart-summary {
     width: 310px !important;
@@ -87,10 +125,6 @@
   .minicartCheckoutButton--minicart-checkout-button :global(.vtex-button) {
     width: 280px !important;
   }
-}
-
-.openIconContainer--minicart-container {
-  padding        : 0;
 }
 
 @media (min-width: 1280px) {
