--- a/styles/css/home/minicart/vtex.checkout-summary.css
+++ b/styles/css/home/minicart/vtex.checkout-summary.css
@@ -24,6 +24,11 @@
     line-height: 16.8px;
 }
 
-.summarySmallContent--minicart-checkout-summary .summaryItemContainer--minicart-summary-totalizers:last-child .summaryItemLabel--minicart-summary-totalizers, .summarySmallContent--minicart-checkout-summary .summaryItemContainer--minicart-summary-totalizers:last-child .price--minicart-summary-totalizers{
-    color: red;
+.summarySmallContent--minicart-checkout-summary .summaryItemContainer--minicart-summary-totalizers:last-child .summaryItemLabel--minicart-summary-totalizers,
+.summarySmallContent--minicart-checkout-summary .summaryItemContainer--minicart-summary-totalizers:last-child .price--minicart-summary-totalizers {
+    color      : red;
+    font-size  : 16px;
+    font-weight: 600;
+    line-height: 19.2px;
+    margin-top : 12px;
 }
