--- a/styles/css/home/minicart/vtex.flex-layout.css
+++ b/styles/css/home/minicart/vtex.flex-layout.css
@@ -6,26 +6,24 @@
     justify-content: left;
 }
 
-@media (min-width: 1024px) {
-    .flexColChild--minicart-footer-column :global(.vtex-minicart-2-x-minicartSummary) {
-        width      : 360px;
-        margin-left: 20px !important;
-        margin-top : 60px;
-    }
-}
 
 .flexColChild--minicart-footer-column :global(.vtex-minicart-2-x-minicartSummary) {
-    /* width        : 360px; */
-    height          : 126px;
-    border-radius   : 4px;
-    border          : 1px solid #E7E7E7;
-    /* margin-left  : 20px; */
-    margin-left     : 10px;
+    height         : 126px;
+    border-radius  : 4px;
+    border         : 1px solid #E7E7E7;
+    margin         : 0;
+    padding        : 0;
+    display        : flex;
+    align-items    : center;
+    justify-content: center;
+    margin-left    : 17px;
 }
 
 .flexRowContent :global(.vtex-product-list-0-x-productImageContainer) {
-    border     : 0.95px solid #E7E7E7;
-    margin-left: 20px;
+    margin-left  : 16.38px;
+    width        : 145px !important;
+    border-radius: 3.78px;
+    border       : 0.95px solid rgba(231, 231, 231, 1)
 }
 
 .flexRow--mini-cart-logo-header-row {
@@ -36,14 +34,19 @@
     margin-top: 0%;
 }
 
-/* .flexRowContent--minicart-footer-row {
-    position: absolute;
-} */
+.flexRowContent--product--quantity {
+    margin: 0 !important;
+}
+
+.flexRowContent--mini-cart-logo-header-row :global(.vtex-flex-layout-0-x-flexCol) {
+    height: 25px;
+}
 
 .flexColChild--minicart--container {
-    overflow  : auto;
-    max-height: 700px;
+    display    : flex;
+    align-items: flex-start;
 }
+
 
 .flexCol--product-buttonremove :global(.vtex-product-list-0-x-deleteIcon) {
     display: none;
@@ -59,4 +62,8 @@
     background-size    : 100%;
     background-position: center;
 
+}
+
+.flexRow--product-description {
+    width: max-content;
 }
