--- a/styles/css/home/minicart/vtex.product-list.css
+++ b/styles/css/home/minicart/vtex.product-list.css
@@ -1,17 +1,14 @@
-/* .deleteIcon {
-    background-image: url("/arquivos/icon-delete.svg") !important;
-    width           : 20px;
-    height          : 20px;
-    position        : absolute;
-} */
-
 .productName {
-    font-size     : 11.34px;
-    font-weight   : 300;
-    line-height   : 15.12px;
-    text-align    : left;
-    width         : 140.84px;
-    /* height     : 32.14px; */
+    font-size         : 11.34px;
+    font-weight       : 300;
+    line-height       : 15.12px;
+    text-align        : left;
+    width             : 140.84px !important;
+    max-height        : 31px;
+    display           : -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow          : hidden;
 }
 
 .productPrice {
@@ -29,24 +26,19 @@
 
 }
 
-/* .removeButtonContainer :global(.vtex-product-list-0-x-deleteIcon){
-    background-image: url("/arquivos/icon-delete.svg") !important
-} */
-
-.productBrandName {
-    display: none;
-}
-
+.productBrandName,
 .productVariationsContainer {
     display: none;
 }
+
 
 .quantitySelectorWrapper :global(.vtex-product-list-0-x-quantitySelectorButton) {
     background-color: #1D2734;
     color           : white
 }
 
-.productImage {
+.productImage,
+.productImageAnchor {
     width        : 145.19px !important;
     height       : 120.99px;
     border-radius: 3.78px;
