--- a/styles/css/home/pdp/vtex.store-components.css
+++ b/styles/css/home/pdp/vtex.store-components.css
@@ -6,17 +6,15 @@
 }
 
 .productImagesGallerySlide {
-    width        : 328px;
+    width        : 328px !important;
     height       : 419px;
     border-radius: 4px;
+    display      : flex;
+    align-items  : center;
 }
 
-/* cambiarx*/
 .carouselGaleryThumbs {
-    width  : 328px;
-    height : 121px;
     display: block;
-    z-index: 16;
 }
 
 
@@ -93,6 +91,7 @@
 .productImagesContainer :global(.vtex-store-components-3-x-productImagesGallerySwiperContainer) {
     border       : 1px solid #E7E7E7;
     border-radius: 4px;
+    height       : 419px;
 }
 
 .productImagesContainer :global(.vtex-store-components-3-x-productImagesThumb) {
@@ -108,12 +107,6 @@
 .thumbImg {
     height: 71px;
 }
-
-/* .skuSelectorInternalBox--sku-selector--pdp {
-    width        : 40px;
-    height       : 40px;
-    border-radius: 100px;
-} */
 
 
 @media screen and (min-width: 1024px) {
