--- a/styles/css/home/shelf-products/vtex.product-price.css
+++ b/styles/css/home/shelf-products/vtex.product-price.css
@@ -1,11 +1,12 @@
 .savings {
-    width           : 84px !important;
-    height          : 20px;
-    padding         : 6px 12px 6px 12px;
-    gap             : 10px;
-    border-radius   : 4px;
-    border          : 1px;
-    background      : rgba(29, 39, 52, 1);
-    color           : white;
+    width        : 84px !important;
+    height       : 20px;
+    padding      : 6px 12px 6px 12px;
+    gap          : 10px;
+    border-radius: 4px;
+    border       : 1px;
+    background   : rgba(29, 39, 52, 1);
+    color        : white;
+    white-space  : nowrap;
 
 }
