--- a/styles/css/home/header/vtex.flex-layout.css
+++ b/styles/css/home/header/vtex.flex-layout.css
@@ -1,53 +1,15 @@
-/*--------------------------------------------css header desktop--------------------------------*/
-.header-container-menu-desktop {
-    width  : 1136px;
-    height : 47px;
-    top    : 9px;
-    left   : 72px;
-    gap    : 0px;
-    opacity: 0px;
-}
-
-.flexRowContent--header-container-menu-desktop {
-    gap       : 40px;
-    text-align: center;
-}
-
-.flexRow--header-container-menu-desktop {
-    margin-left: 45px;
-}
-
-.flexRow--drawer-header :global(.vtex-flex-layout-0-x-flexRowContent--drawer-header) {
-    display: flow-root;
-}
-
-.flexRow--drawer-header :global(.vtex-store-components-3-x-logoImage) {
-    margin-top : 29px;
-    margin-left: 16px;
-}
-.flexCol--trigger-mega-menu-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    margin-top: 1.6rem;
-}
-.flexRow--header-container-menu-desktop-section-one-rigth {
-    margin-left: 35px;
-}
-.flexRowContent--header-container-menu-desktop-section-one-right {
-    margin-top: 25px;
-}
-
 /*--------------------------------------------css header phone--------------------------------*/
 .flexRowContent--header-container-menu-phone {
     display        : flex;
     justify-content: center;
     align-items    : center;
+
 }
 
 .flexRowContent--header-container-menu-phone-section-one {
-    display        : flex;
-    justify-content: space-between;
+    display         : flex;
+    justify-content : space-between;
+    background-color: white;
 }
 
 
@@ -91,20 +53,65 @@
     align-content: center;
 }
 
-@media (max-width: 767px) {
-    .flexRowContent--header-container-menu-desktop {
+.flexRowContent--header-container-menu-desktop {
+    gap: 30px;
+}
+
+/* @media (max-width: 767px) { */
+/* .flexRowContent--header-container-menu-desktop {
         gap: 30px;
     }
 
     .flexRow--header-container-menu-desktop {
         margin-left: 0%;
-    }
-}
+    } */
+/* } */
 
 @media (min-width: 1024px) {
     .flexRow--conatainer-banner-home-desktop {
         max-width: 1280px;
         margin   : auto;
     }
-}
 
+    .header-container-menu-desktop {
+        width  : 1136px;
+        height : 47px;
+        top    : 9px;
+        left   : 72px;
+        gap    : 0px;
+        opacity: 0px;
+    }
+
+    .flexRowContent--header-container-menu-desktop {
+        gap       : 40px;
+        text-align: center;
+    }
+
+    .flexRow--header-container-menu-desktop {
+        margin-left: 45px;
+    }
+
+    .flexRow--drawer-header :global(.vtex-flex-layout-0-x-flexRowContent--drawer-header) {
+        display: flow-root;
+    }
+
+    .flexRow--drawer-header :global(.vtex-store-components-3-x-logoImage) {
+        margin-top : 29px;
+        margin-left: 16px;
+    }
+
+    .flexCol--trigger-mega-menu-container {
+        display        : flex;
+        flex-direction : row;
+        justify-content: flex-end;
+        margin-top     : 1.6rem;
+    }
+
+    .flexRow--header-container-menu-desktop-section-one-rigth {
+        margin-left: 35px;
+    }
+
+    .flexRowContent--header-container-menu-desktop-section-one-right {
+        margin-top: 25px;
+    }
+}
