--- a/styles/css/home/pdp/vtex.product-price.css
+++ b/styles/css/home/pdp/vtex.product-price.css
@@ -1,6 +1,6 @@
 .sellingPrice--hasListPrice {
     font-family: Lexend;
-    font-size  : 24px;
+    font-size  : 20px;
     font-weight: 600;
     line-height: 16.8px;
     text-align : left;
@@ -14,3 +14,8 @@
     text-align : left;
     color      : rgba(29, 39, 52, 0.4);
 }
+/* .currencyContainer {
+    font-size  : 24px;
+    font-weight: 600;
+    line-height: 16.8px;
+} */
