fix: adjust login styles for mobile and desktop, remove commented code, add button to empty shopping cart

--- a/styles/css/home/header/vtex.store-drawer.css
+++ b/styles/css/home/header/vtex.store-drawer.css
@@ -1,9 +1,16 @@
-.openIconContainer--drawer-desktop{
+.openIconContainer--drawer-desktop {
     margin-top: 25px;
 }
-.menuIcon--menu-desktop{
+
+.menuIcon--menu-desktop {
     margin-top: 25px;
 }
-.opened{
+
+.opened {
     width: 66% !important;
+}
+
+.drawerHeader {
+    margin-top : 21px;
+    margin-left: 16px;
 }
