--- a/styles/css/home/header/vtex.login.css
+++ b/styles/css/home/header/vtex.login.css
@@ -1,8 +1,15 @@
-.container {
+.container .button {
   background   : #1d2734;
   height       : 40px;
   min-width    : 80px;
   border-radius: 40px;
+}
+
+.container :global(.vtex-button) {
+  background   : #1d2734;
+  height       : 40px;
+  min-width    : 80px;
+  border-radius: 40px
 }
 
 .label {
@@ -15,8 +22,6 @@
 .label::first-letter {
   text-transform: capitalize;
 }
-
-
 
 .accessCodeOptionBtn :global(.vtex-button) {
   width           : 368px;
@@ -129,8 +134,6 @@
 }
 
 .content--loginOptions {
-  margin-top   : 80px;
-  /* position  : sticky; */
   background   : #F5F4F6;
   width        : 423px;
   height       : 303px;
@@ -171,17 +174,17 @@
 }
 
 .backButton :global(.vtex-button)::before {
-  content   : url("/arquivos/icon__back-login.png");
-   background-repeat  : no-repeat;
-   background-size    : 100%;
-   background-position: center
- }
+  content            : url("/arquivos/icon__back-login.png");
+  background-repeat  : no-repeat;
+  background-size    : 100%;
+  background-position: center
+}
 
 .backButton :global(.t-small) {
   display: none;
 }
 
-.arrowBackIcon{
+.arrowBackIcon {
   display: none;
 }
 
@@ -194,8 +197,6 @@
   align-items: center;
   viewBox    : 0 0 24 24;
 }
-
-
 
 
 .inputContainerPassword :global(.vtex-input-prefix__group) {
@@ -279,13 +280,6 @@
 }
 
 
-/*------------tablet---------------*/
-@media (min-width: 640px) and (max-width: 1024px) {
-  .container {
-    width: 90px !important;
-  }
-}
-
 .googleOptionBtn .oauthLabel {
   font-size: 0;
   display  : flex;
@@ -296,6 +290,7 @@
   display       : inline-block;
   font-size     : 16px;
   text-transform: lowercase;
+  margin-left   : 36px;
 }
 
 .googleOptionBtn :global(.vtex-button__label) ::before {
@@ -312,6 +307,7 @@
   white-space   : nowrap;
   font-size     : 16px;
   text-transform: lowercase;
+  margin-left   : 12.5px;
 }
 
 .facebookOptionBtn .oauthLabel {
@@ -338,7 +334,6 @@
 
 .content--emailAndPassword {
   width        : 423px;
-  height       : 375px;
   padding      : 0%;
   border-radius: 0px 0px 8px 8px;
   background   : #F5F4F6;
@@ -357,8 +352,6 @@
   margin-bottom  : 16px;
 }
 
-
-
 .loginOptionsContainer :global(.vtex-login-2-x-formTitle) {
   margin-top: 0rem;
 }
@@ -375,28 +368,16 @@
 }
 
 .content--beginCreatePass :global(.vtex-login-2-x-formTitle)::before {
-  content       : "RECUPERAR CLAVE";
-  white-space   : nowrap;
-  font-size     : 20px;
-  font-weight   : 300;
-  line-height   : 22.92px;
-  text-align    : center;
-  /* margin-left: 5rem; */
+  content    : "RECUPERAR CLAVE";
+  white-space: nowrap;
+  font-size  : 20px;
+  font-weight: 300;
+  line-height: 22.92px;
+  text-align : center;
 }
 
 .content--beginCreatePass :global(.vtex-login-2-x-formTitle)::after {
   font-size: 0;
-}
-
-.inputContainerEmail::before {
-  content    : "Receive access code by email";
-  white-space: nowrap;
-  font-family: Lexend;
-  font-size  : 14px;
-  font-weight: 300;
-  line-height: 20px;
-  text-align : center;
-  color      : rgba(94, 99, 110, 1);
 }
 
 .content--beginCreatePass .formTitle {
@@ -412,10 +393,10 @@
 
 
 .content--recoveryPassword {
-  width           : 423px;
-  height          : 395px;
-  border-radius   : 0px 0px 8px 8px;
-  background      : #F5F4F6;
+  width        : 423px;
+  height       : 395px;
+  border-radius: 0px 0px 8px 8px;
+  background   : #F5F4F6;
 
 }
 
@@ -427,7 +408,14 @@
   display: none;
 }
 
+.inputContainerAccessCode :global(.vtex-styleguide-9-x-input) {
+  font-family: Lexend;
+  font-size  : 14px;
+  font-weight: 400;
+  line-height: 17.5px;
+  text-align : left;
 
+}
 
 .forgotPasswordForm :global(.vtex-login-2-x-formTitle)::before {
   content    : "RESET YOUR PASSWORD";
@@ -439,7 +427,7 @@
 }
 
 .forgotPasswordForm :global(.vtex-login-2-x-formTitle) {
-  font-size : 0;
+  font-size: 0;
 }
 
 .forgotPasswordForm :global(.vtex-login-2-x-formTitle)::after {
@@ -488,30 +476,37 @@
   margin-bottom  : 24px;
 }
 
+.contentContainer {
+  margin-top: 4rem !important;
+}
 
-.contentFormVisible :global(.c-muted-1) {
-  width             : 368px;
-  height            : 48px;
-  padding           : 10px;
-  gap               : 10px;
-  border-radius     : 40px;
-  margin-bottom     : 0.5rem;
-  display           : flex;
-  justify-content   : center;
-  font-family       : Lexend;
-  font-size         : 14px;
-  font-weight       : 400;
-  line-height       : 17.5px;
-  border            : 1px solid rgba(29, 39, 52, 1);
-  color             : rgba(29, 39, 52, 1);
-  /* display        : none; */
 
+.contentFormVisible .accountOptions a {
+  width          : 368px;
+  height         : 48px;
+  padding        : 10px;
+  gap            : 10px;
+  border-radius  : 40px;
+  margin-bottom  : 0.5rem;
+  display        : flex;
+  justify-content: center;
+  font-family    : Lexend;
+  font-size      : 14px;
+  font-weight    : 400;
+  line-height    : 17.5px;
+  border         : 1px solid rgba(29, 39, 52, 1);
+  color          : rgba(29, 39, 52, 1);
 
 }
 
-.contentFormVisible :global(.c-muted-1):hover {
-  background: rgba(29, 39, 52, 1);
-  color     : white;
+.contentFormVisible .accountOptions a:hover {
+  background   : rgba(29, 39, 52, 1);
+  color        : white;
+  width        : 368px;
+  height       : 48px;
+  padding      : 10px;
+  border-radius: 40px;
+
 }
 
 .contentFormVisible :global(.vtex-login-2-x-logoutButton)::after {
@@ -556,4 +551,29 @@
   line-height: 17.5px;
   text-align : center;
 
+}
+
+.content--accountOptions {
+  position: fixed;
+}
+
+.accountOptions .logoutButton {
+  margin-left: 50%;
+}
+
+.oauthLabel {
+  margin: 0 !important;
+}
+
+/*------------tablet---------------*/
+@media (min-width: 640px) and (max-width: 1024px) {
+  .container {
+    width: 90px !important;
+  }
+}
+
+@media (min-width: 1024px) {
+  .content--emailAndPassword {
+    height: 375px;
+  }
 }
