--- a/styles/css/home/pdp/vtex.flex-layout.css
+++ b/styles/css/home/pdp/vtex.flex-layout.css
@@ -1,7 +1,3 @@
-/* .flexRow--pdp__price {
-    margin-top: 16px;
-} */
-
 .flexColChild--product__gallery {
     height: 10px;
 }
@@ -11,9 +7,13 @@
     justify-content: left;
 }
 
+.flexRowContent--pdp__price :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
+    width       : auto !important;
+    margin-right: 1rem;
+}
+
 .flexRowContent--pdp__price {
     display: flex;
-    width  : 75%;
 }
 
 .flexRowContent--pdp__quantity--button {
@@ -22,7 +22,7 @@
 
 .flexRowContent--pdp__quantity--button :global(.vtex-button) {
     width        : 160px;
-    height       : 48px;
+    height       : 46px;
     padding      : 10px;
     border-radius: 4px;
     background   : rgba(73, 42, 119, 1);
@@ -30,12 +30,9 @@
 }
 
 .flexRowContent--pdp__quantity--button :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
-    width: auto !important;
+    width        : auto !important;
+    padding-right: 16px;
 }
-
-/* .flexRow--pdp__quantity--button :global(.vtex-flex-layout-0-x-flexRowContent--pdp__quantity--button) {
-    width: 85% !important;
-} */
 
 .flexRow--especificartion__pdp :global(.vtex-flex-layout-0-x-stretchChildrenWidt) {
     justify-content: left;
@@ -59,31 +56,29 @@
     margin   : auto;
 }
 
-
-/* .flexColChild--product__information--pdp :global(.vtex-product-price-1-x-currencyContainer)::before {
-    content      : "Now";
-    font-size    : 24px;
-    font-weight  : 600;
-    line-height  : 16.8px;
-    width        : 195px;
-    height       : 17px;
-    padding-right: 0.5rem;
-
-} */
 .flexRowContent--global__product--main {
     justify-content: flex-start;
+    padding        : 0;
+    margin-top     : 24px;
+}
+
+.flexRowContent--pdp__highlights :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
+    padding: 0;
+}
+
+.flexColChild--product__information--pdp {
+    padding-bottom: 16px;
 }
 
 @media screen and (min-width: 1024px) {
     .flexRow--especificartion__pdp .stretchChildrenWidth {
-        display        : grid;
-        justify-content: left;
-        margin-left    : 5rem;
+        width        : 1070px !important;
+        height       : 598px;
+        padding      : 0px 0px 6px 1px;
+        border-radius: 8px;
+        margin       : auto;
     }
 
-    /* .flexRowContent--pdp__price {
-        width: 50%;
-    } */
 
     .flexRowContent--pdp__quantity--button :global(.vtex-button) {
         max-width    : 312px;
@@ -98,7 +93,6 @@
 
     .flexCol--product__image-pdp {
         width : 631px !important;
-        height: 650px;
         margin: auto;
     }
 
@@ -107,7 +101,16 @@
     }
 
     .flexCol--product__information--pdp {
-        padding-left: 24px;
+        padding-left: 24px !important;
     }
+
+    .flexRowContent--pdp__highlights :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
+        padding: 0;
+    }
+
+    .flexRowContent--pdp__price :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
+        margin-right: 0;
+    }
+
 
 }
