--- a/styles/css/home/minicart/vtex.minicart.css
+++ b/styles/css/home/minicart/vtex.minicart.css
@@ -127,7 +127,7 @@
   display  : flex;
 }
 
-.minicartCheckoutButton :global(.vtex-button__label)::first-letter {
+.minicartCheckoutButton :global(.vtex-button__label)::after {
   text-transform: capitalize;
 }
 .minicartCheckoutButton--minicart__empty :global(.vtex-button){
